--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -579,10 +579,9 @@
             files has no significance.
         </p>
         <p>
-            The forward slash (/) path separator MUST be used in content and logical paths in the
-            <a href="#manifest">manifest</a>, <a href="#fixity">fixity</a>, and <a href="#version">state</a> blocks
-            within the inventory. Implementations that target systems using other separators will need to translate
-            paths appropriately.
+            The forward slash (/) path separator MUST be used in content paths in the <a href="#manifest">manifest</a>
+            and <a href="#fixity">fixity</a> blocks within the inventory. Implementations that target systems using
+            other separators will need to translate paths appropriately.
         </p>
         <blockquote class="informative">
             <p>
