--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -453,32 +453,34 @@
             version directory names.
         </p>
         <p>
-            Version directories MUST contain a designated content sub-directory if the version contains files to be
-            preserved, and SHOULD NOT contain this sub-directory otherwise. The name of this designated sub-directory
-            MAY be defined in the <a href="#inventory">inventory file</a> using the key <code>contentDirectory</code>
-            with the value being the chosen sub-directory name as a string, relative to the version directory.
-            The <code>contentDirectory</code> value MUST NOT contain the forward slash (/) path separator. If the key
-            <code>contentDirectory</code> is set, it MUST be set in the first version of the object and MUST NOT
-            change between versions of the same object.
-          </p>
-          <p>
             There MUST be no other files as children of a version directory, other than an <a
-             href="#inventory">inventory file</a> and a <a href="#inventory-digest">inventory digest</a>.
+            href="#inventory">inventory file</a> and a <a href="#inventory-digest">inventory digest</a>.
             The version directory SHOULD NOT contain any directories other than the designated content
             sub-directory. Once created, the contents of a version directory are expected to be immutable.
         </p>
-        <p>
-            If the key <code>contentDirectory</code> is not present in the <a href="#inventory">inventory file</a> then
-            the name of the designated content sub-directory MUST be <code>content</code>. OCFL-compliant tools
-            (including any validators) MUST ignore all directories in the object version directory except for the
-            designated content directory.
-        </p>
-        <p>
-            Every file within a version's content directory MUST be referenced in the <a href="#manifest">manifest</a>
-            section of the inventory. There MUST NOT be empty directories within a version's content directory. A
-            directory that would otherwise be empty MAY be maintained by creating a file within it named according to
-            local conventions, for example by making an empty <code>.keep</code> file.
-        </p>
+        <section id="content-directory">
+          <p>
+              Version directories MUST contain a designated content sub-directory if the version contains files to be
+              preserved, and SHOULD NOT contain this sub-directory otherwise. The name of this designated sub-directory
+              MAY be defined in the <a href="#inventory">inventory file</a> using the key <code>contentDirectory</code>
+              with the value being the chosen sub-directory name as a string, relative to the version directory.
+              The <code>contentDirectory</code> value MUST NOT contain the forward slash (/) path separator. If the key
+              <code>contentDirectory</code> is set, it MUST be set in the first version of the object and MUST NOT
+              change between versions of the same object.
+            </p>
+          <p>
+              If the key <code>contentDirectory</code> is not present in the <a href="#inventory">inventory file</a>
+              then the name of the designated content sub-directory MUST be <code>content</code>. OCFL-compliant tools
+              (including any validators) MUST ignore all directories in the object version directory except for the
+              designated content directory.
+          </p>
+          <p>
+              Every file within a version's content directory MUST be referenced in the <a href="#manifest">manifest</a>
+              section of the inventory. There MUST NOT be empty directories within a version's content directory. A
+              directory that would otherwise be empty MAY be maintained by creating a file within it named according to
+              local conventions, for example by making an empty <code>.keep</code> file.
+          </p>
+        </section>
     </section>
 
     <section id="digests">
