added actual heading

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -459,6 +459,7 @@
             sub-directory. Once created, the contents of a version directory are expected to be immutable.
         </p>
         <section id="content-directory">
+          <h3>Content Directory</h3>
           <p>
               Version directories MUST contain a designated content sub-directory if the version contains files to be
               preserved, and SHOULD NOT contain this sub-directory otherwise. The name of this designated sub-directory
