Another kick at the logical path can
Updated based on @zimeon's original text.

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -697,8 +697,15 @@
                             are digest values, each of which MUST correspond to an entry in the
                             <a href="#manifest">manifest of the inventory</a>. The value for each key is an array
                             containing <a>logical path</a> names of files in the OCFL Object state that have
-                            content with the given digest. Logical paths MUST NOT start with <code>.</code>,
-                            <code>..</code>, <code>/</code>, or <code>//</code>.
+                            content with the given digest.
+                        </p>
+                        <p>
+                            <a href="#logical-path">Logical paths</a> present the structure of an OCFL Object at a
+                            given version. This is given as an array of file paths, with the following restrictions
+                            provide for path safety in this common case. The logical path SHOULD be interpreted as a
+                            set of one or more path elements joined by a <code>/</code> path separator. Path elements
+                            MUST NOT be <code>.</code>, <code>..</code>, or empty (<code>//</code>). Additionally,
+                            a logical path MUST NOT begin with a leading <code>/</code>.
                         </p>
                         <blockquote class="informative">
                             <p>
