Clarify digest inventory computation text

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -818,8 +818,8 @@ DIGEST inventory.json
             <code>inventory.json</code>; that is, the name of the inventory file in the same directory.
         </p>
         <p>
-            The digest of the inventory MUST be computed only after all changes to the inventory have been made, so this
-            sidecar file SHOULD be created as the last step in the versioning process.
+            The digest of the inventory MUST be computed only after all changes to the inventory have been made, and
+            thus writing the digest sidecar file is the last step in the versioning process.
         </p>
     </section>
 
