--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -465,7 +465,8 @@
               preserved, and SHOULD NOT contain this sub-directory otherwise. The name of this designated sub-directory
               MAY be defined in the <a href="#inventory">inventory file</a> using the key <code>contentDirectory</code>
               with the value being the chosen sub-directory name as a string, relative to the version directory.
-              The <code>contentDirectory</code> value MUST NOT contain the forward slash (/) path separator. If the key
+              The <code>contentDirectory</code> value MUST NOT contain the forward slash (<code>/</code>) path
+              separator and MUST NOT be either one or two periods (<code>.</code> or <code>..</code>). If the key
               <code>contentDirectory</code> is set, it MUST be set in the first version of the object and MUST NOT
               change between versions of the same object.
             </p>
