Fix typo, really this time

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -840,7 +840,7 @@ DIGEST inventory.json
             MUST represent the same object state as the corresponding version block in the current inventory file. 
             Additionally, the values of the <code>created</code>, <code>message</code> and <code>user</code> keys in
             each version block in each prior inventory file SHOULD have the same values as the corresponding keys in
-            the correspoding version block in the current inventory file.
+            the corresponding version block in the current inventory file.
         </p>
         <blockquote class="informative">
             Non-normative note: Storing an inventory for every version provides redundancy for this critical
