Self-close not empty with end tag

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <title>Oxford Common File Layout Specification</title>
-    <meta charset="utf-8"></meta>
-    <meta name="description" content="Oxford Common File Layout Specification"></meta>
+    <meta charset="utf-8"/>
+    <meta name="description" content="Oxford Common File Layout Specification"/>
     <script src="../respec-w3c-common.js"
             async class="remove"></script>
     <script class="remove">
