Fixed: Change SHOULD to MUST

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -702,7 +702,7 @@
                         <p>
                             <a href="#logical-path">Logical paths</a> present the structure of an OCFL Object at a
                             given version. This is given as an array of file paths, with the following restrictions
-                            provide for path safety in this common case. The logical path SHOULD be interpreted as a
+                            provide for path safety in this common case. The logical path MUST be interpreted as a
                             set of one or more path elements joined by a <code>/</code> path separator. Path elements
                             MUST NOT be <code>.</code>, <code>..</code>, or empty (<code>//</code>). Additionally,
                             a logical path MUST NOT begin with a leading <code>/</code>.
