Describe inventory consistency between versions (#425)
* Inventory consistency

* Wrap lines

* Fix typo

* Fix typo, really this time

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -835,6 +835,14 @@ DIGEST inventory.json
             most recent version. Every inventory file MUST have a corresponding <a href="#inventory-digest">Inventory
             Digest</a>.
         </p>
+        <p>
+            In the case that prior version directories include an inventory file there will be multiple inventory 
+            files describing prior versions within the OCFL Object. Each version block in each prior inventory file
+            MUST represent the same object state as the corresponding version block in the current inventory file. 
+            Additionally, the values of the <code>created</code>, <code>message</code> and <code>user</code> keys in
+            each version block in each prior inventory file SHOULD have the same values as the corresponding keys in
+            the corresponding version block in the current inventory file.
+        </p>
         <blockquote class="informative">
             Non-normative note: Storing an inventory for every version provides redundancy for this critical
             information in a way that is compatible with storage strategies that have immutable version directories.
