--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -884,7 +884,7 @@ DIGEST inventory.json
           <p>
             Non-normative note: Extension sub-directories should use the same name as a registered extension
             in order to both avoid the possiblity of an extension sub-directory colliding with the name of another
-            registered extension as well as to facilitate the recognition of extensions by OCFL consumer clients.
+            registered extension as well as to facilitate the recognition of extensions by OCFL clients.
           </p>
         </blockquote>
     </section>
@@ -1547,6 +1547,22 @@ myfirstbag
 }
 </pre>
 </section>
+    <section id="example-extended-storage-root">
+        <h2>Example Extended OCFL Storage Root</h2>
+        <p>
+            The following example OCFL Storage Root has an extension containing custom content. The OCFL Storage Root
+            itself remains valid.
+        </p>
+<pre>
+[storage root]
+    ├── 0=ocfl_1.0
+    ├── extensions
+    │   └── 0000-example-extension
+    │       └── file-example.txt
+    ├── ocfl_1.0.txt
+    └── ocfl_layout.json
+</pre>
+    </section>
     <section id="example-extended-object">
         <h2>Example Extended OCFL Object</h2>
         <p>
@@ -1560,7 +1576,7 @@ myfirstbag
     ├── inventory.json.sha512
     ├── extensions
     │   └── 0000-example-extension
-    │       └── file1-new.txt
+    │       └── file1-draft.txt
     └── v1
         ├── inventory.json
         ├── inventory.json.sha512
