Fix address to be mailto URI

--- a/draft/implementation-notes/index.html
+++ b/draft/implementation-notes/index.html
@@ -588,7 +588,7 @@
         ]
       },
       "user": {
-        "address": "secret@example.org",
+        "address": "mailto:secret@example.org",
         "name": "Secret Agent"
       }
     }
@@ -648,7 +648,7 @@
         ]
       },
       "user": {
-        "address": "secret@example.org",
+        "address": "mailto:secret@example.org",
         "name": "Secret Agent"
       }
     },
@@ -661,7 +661,7 @@
         ]
       },
       "user": {
-        "address": "special@example.org",
+        "address": "mailto:special@example.org",
         "name": "Special Agent"
       }
     }
