--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -707,8 +707,8 @@
                             provide for path safety in the common case of the logical path value representing a file
                             path. The logical path MUST be interpreted as a set of one or more path elements joined by
                             a <code>/</code> path separator. Path elements MUST NOT be <code>.</code>, <code>..</code>,
-                            or empty (<code>//</code>). Additionally, a logical path MUST NOT begin with a leading
-                            <code>/</code>.
+                            or empty (<code>//</code>). Additionally, a logical path MUST NOT begin or end with a
+                            forward slash (<code>/</code>).
                         </p>
                         <blockquote class="informative">
                             <p>
