--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -861,8 +861,8 @@ DIGEST inventory.json
             <span id="W010">SHOULD</span> include an inventory file that is an <a href="#inventory">Inventory</a> of
             all content for versions up to and including that particular version. Where an OCFL Object contains
             <code>inventory.json</code> in version directories, the inventory file in the OCFL Object Root
-            <span id="E064">MUST</span> be the same as the file in the most recent version. Every inventory file
-            <span id="E065">MUST</span> have a corresponding <a href="#inventory-digest">Inventory Digest</a>.
+            <span id="E064">MUST</span> be the same as the file in the most recent version. See also requirements for
+            the corresponding <a href="#inventory-digest">Inventory Digest</a>.
         </p>
         <p>
             In the case that prior version directories include an inventory file there will be multiple inventory
