--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -651,10 +651,10 @@
             <h2>Manifest</h2>
             <p>
                 The value of the <code>manifest</code> key is a JSON object, with keys corresponding to the digests
-                of every content file in all versions of the <a>OCFL Object</a>. The value for each key is an array
-                containing the <a>content path</a>s of files in the OCFL Object that have content with the
-                given digest. Content paths within a manifest block <span id="E042">MUST</span> be relative to the
-                <a>OCFL Object Root</a>.
+                of every content file in all versions of the <a>OCFL Object</a>. The value for each key
+                <span id="E092">MUST</span> be an array containing the <a>content path</a>s of files in the OCFL
+                Object that have content with the given digest. Content paths within a manifest block
+                <span id="E042">MUST</span> be relative to the <a>OCFL Object Root</a>.
             </p>
             <blockquote class="informative">
                 <p>
