Update awoods org home

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -45,8 +45,8 @@
                 {
                     name: "Andrew Woods",
                     url: "https://orcid.org/0000-0002-8318-4225",
-                    company: "DuraSpace",
-                    companyURL: "http://duraspace.org/"
+                    company: "LYRASIS",
+                    companyURL: "https://lyrasis.org/"
                 }
             ],
             edDraftURI: "https://ocfl.io/draft/spec/",
