--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -765,7 +765,7 @@
                         <code>message</code>
                     </dt>
                     <dd>
-                        The value of this key is freeform text, used to record the rationale for creating this version.
+                        The value of this key is freeform text, used to record the rationale for creating this version. It <span id="E094">MUST</span> be a JSON string.
                     </dd>
                     <dt>
                         <code>user</code>
