--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -727,7 +727,7 @@
                                     or empty (<code>//</code>).</li>
                                 <li>A logical path <span id="E053">MUST NOT</span> begin or end with a forward slash 
                                     (<code>/</code>).</li>
-                                <li>Within a version, logical paths <span id="Etbd">MUST</span> be unique and 
+                                <li>Within a version, logical paths <span id="E094">MUST</span> be unique and 
                                     non-conflicting, so the logical path for a file cannot appear as the initial part
                                     of another logical path</li>
                             </ul>
