--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -729,7 +729,7 @@
                                     (<code>/</code>).</li>
                                 <li>Within a version, logical paths <span id="E094">MUST</span> be unique and 
                                     non-conflicting, so the logical path for a file cannot appear as the initial part
-                                    of another logical path</li>
+                                    of another logical path.</li>
                             </ul>
                         <blockquote class="informative">
                             <p>
